# USD-vcpkg-sample

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
